--- a/templates/agt.html
+++ b/templates/agt.html
@@ -47,6 +47,9 @@
                         <div class="input-group">
                             {{form.contactno}}
                         </div>
+                        <div class="input-group">
+                            {{form.perform}}
+                        </div>
                         <div class="input-group1 input--style-3">
                           <H3> Price:&nbsp;&nbsp;&nbsp;&#x20b9 {{price}}</H3>
                         </div>
