--- a/templates/bigroar.html
+++ b/templates/bigroar.html
@@ -92,19 +92,19 @@
         {% csrf_token %}
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.name|as_crispy_field }}
+                {{ form.name}}
             </div>
             <div class="form-group col-md-6 mb-0">
-                {{ form.email|as_crispy_field }}
+                {{ form.email }}
             </div>
         </div>
-        {{ form.college|as_crispy_field }}}
+        {{ form.college}}
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.contactno|as_crispy_field }}
+                {{ form.contactno}}
             </div>
         </div>
-        <button type="submit" class="btn btn-primary">Sign in</button>
+        <button type="submit" class="btn btn-primary">Register</button>
     </form>
     {
     <br>
