--- a/templates/events.html
+++ b/templates/events.html
@@ -63,7 +63,7 @@
 <!--Header ENd-->
 
 <!--page title section-->
-<section class="inner_cover parallax-window" data-parallax="scroll" data-image-src="{% static 'assets/events/main.jpg' %}">
+<section class="inner_cover parallax-window" data-parallax="scroll" data-image-src="{% static 'assets/events/main.png' %}">
     <div class="overlay_dark"></div>
     <div class="container">
         <div class="row justify-content-center align-items-center">
@@ -105,7 +105,7 @@
     <!-- Card image -->
 
     <div class="view overlay">
-      <img class="card-img-top rounded-0" src="{% static 'assets/events/onlinecycle_online.jpg'%}" alt="Card image cap">
+      <img class="card-img-top rounded-0" src="{% static 'assets/events/onlinecycle_online.png'%}" alt="Card image cap">
       <a href="#!">
         <div class="mask rgba-white-slight"></div>
       </a>
@@ -128,48 +128,48 @@
     </div>
   </div>
 </div>
-<!-- <div class="col-md-3 col-sm-6">
-<div class="card promoting-card">
-  <div class="card-body d-flex flex-row">
+<!-- <!-- <div class="col-md-3 col-sm-6"> --> -->
+<!-- <div class="card promoting-card"> -->
+  <!-- <div class="card-body d-flex flex-row"> -->
   <div>
 
-    Title
-    <h4 class="card-title font-weight-bold mb-2">Samarth</h4>
-    Subtitle
-    <p class="card-text"><i class="far fa-clock pr-2"></i>02/19/2020</p>
+    <!-- Title -->
+    <!-- <h4 class="card-title font-weight-bold mb-2">Samarth</h4> -->
+    <!-- Subtitle -->
+    <!-- <p class="card-text"><i class="far fa-clock pr-2"></i>02/19/2020</p> -->
 
-  </div>
+  <!-- </div> -->
 
-  </div>
-  <div class="view overlay">
-  <img class="card-img-top rounded-0" src="{% static 'assets/events/Samarth.png'%}" alt="Card image cap">
-  <a href="#!">
-    <div class="mask rgba-white-slight"></div>
-  </a>
-  </div>
-    <div class="card-body">
+  <!-- </div> -->
+  <!-- <div class="view overlay"> -->
+  <!-- <!-- <img class="card-img-top rounded-0" src="{% static 'assets/events/Samarth.png'%}" alt="Card image cap"> --> -->
+  <!-- <a href="#!"> -->
+    <!-- <div class="mask rgba-white-slight"></div> -->
+  <!-- </a> -->
+  <!-- </div> -->
+    <!-- <div class="card-body"> -->
 
-  <div class="collapse-content">
+  <!-- <div class="collapse-content"> -->
 
-    Text
+    <!-- Text -->
     <!-- <p id="collapseContent">Recently, we added several exotic new dishes to our restaurant menu. They come from countries such as Mexico, Argentina, and Spain. Come to us, have some delicious wine and enjoy our juicy meals from around the world.</p> -->
     <!-- Button -->
     <!-- <a class="btn btn-flat red-text p-1 my-1 mr-0 mml-1 collapsed" data-toggle="collapse" href="#collapseContent" aria-expanded="false" aria-controls="collapseContent"></a> -->
     <!-- <i class="fas fa-share-alt text-muted float-right p-1 my-1" data-toggle="tooltip" data-placement="top" title="Share this post"></i> -->
     <!-- <i class="fas fa-heart text-muted float-right p-1 my-1 mr-3" data-toggle="tooltip" data-placement="top" title="I like it"></i> -->
 
-  <!-- </div>
+  <!-- </div> -->
 
-</div>
-  </div>
-  </div> -->
-</div>
+<!-- </div> -->
+  <!-- </div> -->
+  <!-- </div> -->
+<!-- </div> -->
 <br>
 <br>
 <div class="section_title">
     <h3 class="title">
         Main Events<br>
-        <!-- <button type="button" class="btn btn-outline-secondary" onclick="window.location.href ='https://form.jotform.com/200270622975453'; window.location.target='_blank'">Register Now</button> -->
+        <button type="button" class="btn btn-outline-secondary" onclick="window.location.href ='https://form.jotform.com/200270622975453'; window.location.target='_blank'">Register Now</button>
     </h3>
 </div>
 <br>
@@ -184,7 +184,7 @@
     </div>
   </div>
   <div class="view overlay">
-    <img class="card-img-top rounded-0" src="{% static 'assets/events/vyaktiva_online.jpg'%}" alt="Card image cap">
+    <img class="card-img-top rounded-0" src="{% static 'assets/events/vyaktiva_online.png'%}" alt="Card image cap">
     <a href="#!">
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -219,7 +219,7 @@
   <!-- Card image -->
 
   <div class="view overlay">
-    <img class="card-img-top rounded-0" src="{% static 'assets/events/bigroar.jpg'%}" alt="Card image cap">
+    <img class="card-img-top rounded-0" src="{% static 'assets/events/big_roar online_post-01.png'%}" alt="Card image cap">
     <a href="#!">
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -262,7 +262,7 @@
   <!-- Card image -->
 
   <div class="view overlay">
-    <img class="card-img-top rounded-0" src="{% static 'assets/events/kavyanjali.jpg'%}" alt="Card image cap">
+    <img class="card-img-top rounded-0" src="{% static 'assets/events/Kavyanjali1.png'%}" alt="Card image cap">
     <a href="#!">
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -296,15 +296,13 @@
       <h4 class="card-title font-weight-bold mb-2">Craftix</h4>
       <!-- Subtitle -->
       <p class="card-text"><i class="far fa-clock pr-2"></i>02/24/2020</p>
-
     </div>
-
   </div>
 
   <!-- Card image -->
 
   <div class="view overlay">
-    <img class="card-img-top rounded-0" src="{% static 'assets/events/craftix_online_final.jpg'%}" alt="Card image cap">
+    <img class="card-img-top rounded-0" src="{% static 'assets/events/Craftix Online Final.png'%}" alt="Card image cap">
     <a href="#!">
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -344,7 +342,7 @@
     <!-- Card image -->
 
     <div class="view overlay">
-      <img class="card-img-top rounded-0" src="{% static 'assets/events/talk_masters_poster__SEOfm.jpg'%}" alt="Card image cap">
+      <img class="card-img-top rounded-0" src="{% static 'assets/events/Talk Masters Poster-01.png'%}" alt="Card image cap">
       <a href="#!">
         <div class="mask rgba-white-slight"></div>
       </a>
@@ -488,7 +486,7 @@
     <!-- Card image -->
 
     <div class="view overlay">
-      <img class="card-img-top rounded-0" src="{% static 'assets/events/tothebeat.jpg'%}" alt="Card image cap">
+      <img class="card-img-top rounded-0" src="{% static 'assets/events/tothebeat.png'%}" alt="Card image cap">
       <a href="#!">
         <div class="mask rgba-white-slight"></div>
       </a>
