--- a/templates/tothebeatg.html
+++ b/templates/tothebeatg.html
@@ -92,19 +92,19 @@
         {% csrf_token %}
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.leader_name|as_crispy_field }}
+                {{ form.leader_name}}
             </div>
             <div class="form-group col-md-6 mb-0">
-                {{ form.email|as_crispy_field }}
+                {{ form.email}}
             </div>
         </div>
-        {{ form.college|as_crispy_field }}
+        {{ form.college}}
         <div class="form-row">
             <div class="form-group col-md-6 mb-0">
-                {{ form.leader_contactno|as_crispy_field }}
+                {{ form.leader_contactno}}
             </div>
             <div class="form-group col-md-4 mb-0">
-                {{ form.number_of_part|as_crispy_field }}
+                {{ form.number_of_part}}
             </div>
         </div>
         <button type="submit" class="btn btn-primary">Register</button>
